Added Categories API.
